Completed smoke testing. Added changelog and updated documentation